# zhangjinyao-works-public

./: NEXUS-AI原型链接.docx  README.md  index.html
aipm-project/: .gitignore  AGENTS.md  fix-meta04.cjs  fix-path04.cjs  fix2-state.json  review-after-fix-state.json  review-cdp-state.json  review-final-state.json  tarot-answers.json  test-answers-e2e.json  test-answers.json  test-e2e.js  test-options.cjs  test-options2.cjs  test-options3.cjs  test-progressive.cjs  test-questions.cjs  test-raw-sse.txt  test-review-real.cjs  test-review-sse.cjs  test-stage02-04.cjs  test-stage04-stream.cjs  test-stage04.cjs  test-stream-debug.cjs  test-stream-direct.cjs  test-stream-fetch.cjs  test-stream-v2.cjs  test-tarot-e2e.cjs
aipm-project/.claude/: settings.local.json
aipm-project/backend/: .env.example  README.md  package-lock.json  package.json
aipm-project/backend-pipeline/: .demo-mode  DEMO-MODE-README.md  demo-off.bat  demo-on.bat  package-lock.json  package.json  start.js  演示快速指南.md
aipm-project/docs/: API_CONTRACT.md  PROJECT_MASTER.md
aipm-project/frontend/: auto-answer.js  auto-answer2.js  decisions.html  demo-dxm.html  index.html  model-gallery.html  stage-run.html  stage0.html  stage05.html  start.html  status.html  theatre.html  workbench.html
skills/adaptive-reasoning/: SKILL.md  _meta.json  skill-card.md
skills/agent-autopilot/: SKILL.md  _meta.json  (+1 more)
skills/ds-star/: README.md  SKILL.md  config.yaml  dsstar.py  prompt.yaml  provider.py  pyproject.toml
岛游智选/: .gitignore  小青multi_agent设计文档.md  岛游智选-app原型.html  岛游智选-web原型.html  岛游智选产品文档.md  旅行规划 Agent小青 实现方案.md
(+302 files in other folders)
